# GEO-metadata-cleaner

./: .env.example  .gitignore  README.md  environment.yaml  pyproject.toml
configs/: base.json
experiments/: EXP-01.yaml  EXP-02.yaml  EXP-03.yaml  EXP-04.yaml  EXP-05.yaml  EXP-06.yaml  EXP-07.yaml  EXP-08.yaml  EXP-09.yaml  EXP-10.yaml
scripts/: make_experiment_specs.py  plot_runtime_tradeoff.py  run_experiments.py
src/: ontology.json
src/geo_cleaner/: candidate_retrieval.py  cli.py  config.py  contracts.py  database.py  export_models.py  exporter.py  extractor.py  ingest.py  linker.py  manifest.py  ncbi_client.py  negation.py  offsets.py  ontology_bundle.py  pipeline.py  querygse.py  reranker.py  run_layout.py  stable_json.py  status_policy.py  textview.py  utils.py  utils_device.py  utils_git.py
src/geo_cleaner/experiments/: consolidate.py  metrics.py  overrides.py  runner.py  spec.py
src/geo_cleaner/manager/: cli.py  downloader.py  searcher.py
src/geo_cleaner/ontology/: builder.py  cli.py
tests/: test_epic0_manifest_and_layout.py  test_epic10_harness.py  test_epic1_querygse.py  test_epic3_contracts_offsets.py  test_epic4_textview.py  test_epic5_ontologybundle.py  test_epic6_extractor.py  test_epic7_candidate_retrieval.py  test_epic8_rerank_policy_dedup.py  test_epic9_export.py
